--- a/index.html
+++ b/index.html
@@ -1,95 +1,34 @@
-<!DOCTYPE html>
-<html>
+<!-- <!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>DOM Playground</title>
-    <link rel="stylesheet" href="style.css" media="screen" title="no title" />
-    <script src="script.js" charset="utf-8"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Event Handlers</title>
+    <script src="./script.js"></script>
   </head>
   <body>
-    <header>
-      <h1 id="main-title">
-        Hi! My name is DOM Toretto. Welcome to my homepage.
-      </h1>
-    </header>
+    <form>
+      <input id="email" name="email" />
+      <input id="password" name="password" />
+      <button onclick="submit()">Submit</button>
+    </form>
+  </body>
+</html>
+ -->
 
-    <div class="side-bar">
-      <h4>Dom's Favorite Things</h4>
-      <ul id="favorite-things">
-        <li>Fast cars</li>
-        <li>Muscles</li>
-        <li>Sleeveless t-shirts</li>
-        <li>Revving my engine</li>
-        <li>Living my life a quarter mile at a time</li>
-        <li>Staring people down</li>
-      </ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TO DO</title>
+  </head>
 
-      <h4>My Best Friends</h4>
-      <img
-        class="family-photo"
-        alt="photo"
-        src="http://i.giphy.com/S8T3No3DMwEXS.gif"
-      />
-      <img
-        class="family-photo"
-        alt="photo"
-        src="http://i.giphy.com/N91f9QjC32eI.gif"
-      />
-      <img
-        class="family-photo"
-        alt="photo"
-        src="http://i.giphy.com/Ngn9gNdeHT3oI.gif"
-      />
-      <img
-        class="family-photo"
-        alt="photo"
-        src="http://i.giphy.com/415QwSjh4i9LG.gif"
-      />
-      <img
-        class="family-photo"
-        alt="photo"
-        src="http://i.giphy.com/46VBGqTsyzYfC.gif"
-      />
-    </div>
-
-    <div class="main">
-      <div id="quote-title" class="special-title">Quote of the Day</div>
-      <p id="quote-of-the-day"></p>
-      <img src="http://i.giphy.com/aG15SLmsjxiNO.gif" alt="" />
-
-      <div id="dom-adventures" class="special-title">DOM's Adventures</div>
-      <div class="blog-post purple">
-        <h1>Dubai</h1>
-        <p>OMG I JUMPED MY CAR ACROSS TWO SKYSKRAPERS!</p>
-      </div>
-      <div class="blog-post purple">
-        <h1>London</h1>
-        <p>I DROVE MY CAR THROUGH AN AIRPLANE!</p>
-      </div>
-      <div class="blog-post purple">
-        <h1>Brazil</h1>
-        <p>I STOLE A GIANT BANK VAULT WITH MY CAR!</p>
-      </div>
-      <div class="blog-post purple">
-        <h1>Tokyo</h1>
-        <p>I DRIFTED MY CAR AROUND A PARKING GARAGE!</p>
-      </div>
-      <div class="blog-post purple">
-        <h1>Los Angeles</h1>
-        <p>I RACED PAUL WALKER AND WON HIS CAR WITH MY CAR!</p>
-      </div>
-    </div>
-
-    <div class="side-bar">
-      <h4>Past Races</h4>
-      <ul id="past-races">
-        <li>Los Angeles</li>
-        <li>Tokyo</li>
-        <li>Brazil</li>
-        <li>Chicago</li>
-        <li>London</li>
-        <li>Dubai</li>
-      </ul>
-    </div>
+  <body>
+    <input type="text" id="todo" />
+    <button id="add">Add Task</button>
+    <h1>To Do List</h1>
+    <ul id="list"></ul>
+    <script src="./script.js"></script>
   </body>
 </html>
